border padding styling button

--- a/Static Website/day1/style.css
+++ b/Static Website/day1/style.css
@@ -1,6 +1,14 @@
+.bg-container{
+    background-image: url("https://image.freepik.com/free-photo/beautiful-girl-standing-viewpoint-koh-nangyuan-island-near-koh-tao-island-surat-thani-thailand_335224-1094.jpg");
+    height: 100vh;
+    background-size: cover;
+}
 .card{
     text-align: center;
-    background-color: lightblue;
+    background-color: white;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    padding: 10px;
 }
 .main-heading{
     font-family: Roboto;
@@ -11,4 +19,12 @@
 .paragraph{
     color: grey;
     text-decoration: underline;
+}
+.button{
+    height: 36px;
+    width: 135px;
+    background-color: lightblue;
+    border-radius: 20px;
+    color: whitesmoke;
+    border-width: 0px;
 }
