--- a/Static Website/day2/Coding Practice 3/style.css
+++ b/Static Website/day2/Coding Practice 3/style.css
@@ -1,28 +1,21 @@
-.bg-container {
-    background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/foodbg.png");
-    height: 100vh;
+.bg-container{
+    background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/codingbg.png");
     background-size: cover;
+    height: 100vh;
 }
-.food-card {
+.text-container{
+    border-width: 6px;
+    border-style: solid;
+    border-color: #48ee59;
+    background-color: #00000080;
+    margin: 60px;
+}
+.text-area{
+
+    color: white;
+    font-size: 40px;
     text-align: left;
-    background-color: #f6c56e;
-    padding: 35px;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-    color: #323f4b;
-    font-weight: bold;
-}
-.main-heading {
-    font-family: "Bree Serif";
-}
-.paragraph {
-    font-family: "Roboto";
-}
-.button {
-    height: 36px;
-    width: 138px;
-    background-color: #ffffff;
-    border-radius: 20px;
-    border-width: 0px;
-    font-family: "Roboto";
+    padding: 40px;
+    font-family: sans-serif;
+
 }
